Overhauled the image processing stack, implementing image factories, effects and renderers as models

--- a/woost/views/resources/styles/ImageGallery.css
+++ b/woost/views/resources/styles/ImageGallery.css
@@ -5,12 +5,8 @@
     margin: 0;
 }
 
-.ImageGallery.thumbnails {
-    overflow: hidden;
-}
-
 .ImageGallery.thumbnails .image_entry {
-    float: left;
+    display: inline-block;
     margin: 0.5em;
 }
 
