--- a/woost/views/resources/styles/blocks-EditBlocksView.css
+++ b/woost/views/resources/styles/blocks-EditBlocksView.css
@@ -11,6 +11,10 @@
     background-color: white;
 }
 
+.EditBlocksView .EditBlocksSlotList .slot.folded .slot_blocks {
+    display: none;
+}
+
 .EditBlocksView > .body > .toolbar .close_action {
     float: right;
 }
@@ -185,6 +189,23 @@
     font-size: 0.7em;
     margin-top: 1.2em;
     margin-bottom: 0.4em;
+    display: inline-block;
+}
+
+.EditBlocksView .EditBlocksSlotList.foldable .slot_header {
+    cursor: pointer;
+}
+
+.EditBlocksView .EditBlocksSlotList.foldable .slot_header:before {
+    content: "▼";
+    display: inline-block;
+    width: 1.1em;
+}
+
+.EditBlocksView .EditBlocksSlotList.foldable .slot.folded .slot_header:before {
+    content: "▶";
+    display: inline-block;
+    width: 1.1em;
 }
 
 .EditBlocksView .BlockDisplay .block_handle .panel {
