bugfix in blocks fold and unfold functions

--- a/woost/views/resources/styles/blocks-EditBlocksView.css
+++ b/woost/views/resources/styles/blocks-EditBlocksView.css
@@ -11,7 +11,7 @@
     background-color: white;
 }
 
-.EditBlocksView .EditBlocksSlotList .slot.folded .slot_blocks {
+.EditBlocksView .EditBlocksSlotList .slot.folded > .slot_blocks {
     display: none;
 }
 
