blocks extension: setting a link for a text+images block overrode the resulting element type for a block (so it was impossible to, for example, have a block with a link behaving as a section). Now the link is added as a wrapper for the content, instead of changing the tag of the view root.

--- a/woost/views/resources/styles/blocks.css
+++ b/woost/views/resources/styles/blocks.css
@@ -3,29 +3,33 @@
     overflow: hidden;
 }
 
-.TextBlockView > .image_gallery .image_entry {
+.TextBlockView > .block_link {
+    display: block;
+}
+
+.TextBlockView .image_gallery .image_entry {
     margin: 0;
     margin-right: 1em;
     margin-bottom: 1em;
 }
 
 /* Top left */
-.TextBlockView.top_left > .image_gallery .image_entry > a {
+.TextBlockView.top_left .image_gallery .image_entry > a {
     text-align: left;
 }
 
 /* Top right */
-.TextBlockView.top_right > .image_gallery .image_entry > a {
+.TextBlockView.top_right .image_gallery .image_entry > a {
     text-align: right;
 }
 
 /* Float top left */
-.TextBlockView.float_top_left > .image_gallery {
+.TextBlockView.float_top_left .image_gallery {
     float: left;
 }
 
 /* Float top right */
-.TextBlockView.float_top_right > .image_gallery {
+.TextBlockView.float_top_right .image_gallery {
     float: right;
 }
 
@@ -34,18 +38,18 @@
     display: table-row;
 }
 
-.TextBlockView .columns_wrapper > .image_gallery,
-.TextBlockView .columns_wrapper > .text_container {
+.TextBlockView .columns_wrapper .image_gallery,
+.TextBlockView .columns_wrapper .text_container {
     display: table-cell;
     vertical-align: top;
 }
 
 /* Center top */
-.TextBlockView.center_top > .image_gallery {
+.TextBlockView.center_top .image_gallery {
     text-align: center;
 }
 
-.TextBlockView.center_top > .image_gallery > ul {
+.TextBlockView.center_top .image_gallery > ul {
     display: inline-block;
 }
 
