Alignment tweaks for the 'remove this filter' button in the backoffice

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -2109,6 +2109,12 @@ button.TypeSelectorButton span {
     padding: 0;
 }
 
+.BackOfficeLayout .FilterBox .deleteButton {
+    position: relative;
+    top: 0.5em;
+    font-size: 0.8em;
+}
+
 .BackOfficeLayout .CollectionView .filters .filter_desc {
     min-width: 10em;
     margin-top: 0.3em;
