blocks extension: changed the labels in the block tree of the frontend toolbar to display:block (makes highlighting blocks easier)

--- a/woost/views/resources/styles/blocks-EditPanelOverlay.css
+++ b/woost/views/resources/styles/blocks-EditPanelOverlay.css
@@ -27,6 +27,7 @@
 
 .EditPanel .block_tree .entry_label {
     padding: 0.1em 0.3em;
+    display: block;
 }
 
 .EditPanel .block_tree .entry_label .qualifier_label {
