--- a/woost/views/resources/styles/blocks-EditBlocksView.css
+++ b/woost/views/resources/styles/blocks-EditBlocksView.css
@@ -69,9 +69,14 @@
 .block_picker_dialog .new_blocks_panel,
 .block_picker_dialog .common_blocks_panel {
     display: inline-block;
-    max-height: 30em;
-    overflow: auto;
     vertical-align: top;
+}
+
+.block_picker_dialog .new_blocks_panel .new_blocks_palette,
+.block_picker_dialog .common_blocks_panel .common_blocks_form {
+    max-height: 40em;
+    overflow: auto;
+    padding-right: 1em;
 }
 
 .block_picker_dialog .new_blocks_panel {
@@ -123,9 +128,14 @@
     font-size: 0.9em;
 }
 
+.block_picker_dialog .new_blocks_panel .palette_entry img,
 .block_picker_dialog .common_blocks_panel .ItemLabel img {
     position: relative;
     top: 0.2em;
+    margin-right: 0.2em;
+}
+
+.block_picker_dialog .common_blocks_panel .ItemLabel img {
     margin-right: 0.4em;
 }
 
