Removed the delete link from the frontend edit panel (it was seldomly used), replaced it with an edit link for the Site (which is accessed much more often)

--- a/woost/views/resources/styles/EditPanel.css
+++ b/woost/views/resources/styles/EditPanel.css
@@ -22,7 +22,7 @@
 }
 
 .EditPanel .edit_panel_section {
-    margin-bottom: 1em;
+    margin-top: 1em;
 }
 
 .EditPanel .edit_panel_section_content {
@@ -70,7 +70,14 @@
     text-decoration: none;
 }
 
+.EditPanel .EditLink + .EditLink {
+    margin-top: 0.2em;
+}
+
 .EditPanel .EditLink .label {
     text-decoration: underline;
+    font-size: 1.1em;
+    position: relative;
+    top: -2px;
 }
 
