--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -288,6 +288,10 @@ body {
 
 .BackOfficeLayout input[type=text],
 .BackOfficeLayout input[type=password],
+.BackOfficeLayout input[type=url],
+.BackOfficeLayout input[type=email],
+.BackOfficeLayout input[type=number],
+.BackOfficeLayout input[type=tel],
 .BackOfficeLayout textarea,
 .BackOfficeLayout .CodeMirror-wrapping {
     border: 1px solid rgb(200,200,200);
