blocks extension: text blocks now add the 'no_images', 'single_image' and 'no_text' CSS classes (useful for setting margins)

--- a/woost/views/resources/styles/blocks.css
+++ b/woost/views/resources/styles/blocks.css
@@ -13,6 +13,10 @@
     margin-bottom: 1em;
 }
 
+.TextBlockView.single_image.no_text .image_gallery .image_entry {
+    margin: 0;
+}
+
 /* Top left */
 .TextBlockView.top_left .image_gallery .image_entry,
 .TextBlockView.top_right .image_gallery .image_entry {
