--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -959,6 +959,7 @@ body.scripted .BackOfficeLayout .Table .selection {
     font-size: 1em;
     font-weight: normal;
     overflow: hidden;
+    line-height: 1.2em;
 }
 
 .BackOfficeItemView h2 .item_icon {
@@ -977,8 +978,7 @@ body.scripted .BackOfficeLayout .Table .selection {
 }
 
 .BackOfficeItemView h2 .item_info > span {
-    font-size: 0.85em;
-    margin-top: 0.3em;
+    font-size: 0.9em;
     margin-right: 0.3em;
     color: #333;
 }
@@ -1075,7 +1075,7 @@ body.scripted .BackOfficeLayout .Table .selection {
 .BackOfficeLayout .toolbar,
 .BackOfficeLayout .toolbar_box {
 	clear: both;
-    margin-top: 1em;    
+    margin-top: 1.5em;
 	background-color: rgb(242,240,235);
 	border: 1px solid rgb(232,230,225);    
 }
@@ -3213,5 +3213,35 @@ div.success_label {
 
 .BackOfficeItemView .block_map .block_list .ItemLabel {
     font-size: 0.75em;
+}
+
+/* BackOfficeItemHeading
+-----------------------------------------------------------------------------*/
+.BackOfficeItemHeading .item_path {
+    margin-left: -0.3em;
+}
+
+.BackOfficeItemHeading .item_path ul {
+    list-style-type: none;
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+    margin-left: 0.2em;
+}
+
+.BackOfficeItemHeading .item_path li {
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+}
+
+.BackOfficeItemHeading .item_path li + li:before {
+    position: relative;
+    top: 0.1em;
+    content: '>';
+    margin: 0 0.4em;
+    color: #666;
+    font-weight: bold;
+    font-size: 1.2em;
 }
 
