Added preliminary support in the backoffice for editing object relations using drag & drop operations

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -718,6 +718,10 @@ body.scripted .BackOfficeLayout .Table .selection {
     cursor: default;
 }
 
+.BackOfficeLayout .ContentTable .ItemLabel {
+    display: inline-block;
+}
+
 .BackOfficeLayout .ContentTable th .selector > .label {
     background-position: right 0.5em;
     white-space: nowrap;
@@ -1501,7 +1505,7 @@ body.scripted .BackOfficeLayout .selector:hover .selector_content {
 }
 
 .BackOfficeLayout .TreeContentView .expander + label {
-    margin-left: 1.5em;
+    margin-left: 0.3em;
 }
 
 .BackOfficeLayout .TreeContentView .expander img {
@@ -3246,3 +3250,34 @@ div.success_label {
 .BackOfficeItemHeading .item_path li a {
     display: inline-block;
 }
+
+/* Content drag & drop
+-----------------------------------------------------------------------------*/
+.BackOfficeLayout .drag {
+    opacity: 0.7;
+}
+
+.BackOfficeLayout .dropReceiver {
+    position: relative;
+    background-color: #a6eeff;
+    background-image: -webkit-linear-gradient(#e4eff2,#ccdade);
+    background-image: -moz-linear-gradient(#e4eff2,#ccdade);
+    background-image: linear-gradient(#e4eff2,#ccdade);
+    outline: 1px dashed #a6c5cc;
+}
+
+.BackOfficeLayout .dropBeforeReceiver {
+    position: relative;
+    margin-top: -1px;
+    border-top: 1px dashed #ccdade;
+}
+
+.BackOfficeLayout .dragInsertionMarker {
+    position: absolute;
+    background-repeat: no-repeat;
+    background-image: url(../images/insertion_marker.png);
+    background-position: left center;
+    padding-left: 0.8em;
+    white-space: nowrap;
+}
+
