--- a/woost/views/resources/styles/blocks.css
+++ b/woost/views/resources/styles/blocks.css
@@ -106,3 +106,51 @@
     text-decoration: underline;
 }
 
+/* PublishableGrid
+-----------------------------------------------------------------------------*/ 
+.PublishableGrid .entry {
+    display: inline-block;
+    vertical-align: top;
+    text-align: center;
+    padding: 1em;
+    margin: 0;
+    width: 22em;
+}
+
+.PublishableGrid li.entry {
+    list-style: none;
+}
+
+.PublishableGrid .entry .publishable_view {
+    display: block;
+    margin-bottom: 1em;
+}
+
+.PublishableGrid .entry .AudioPlayer  {
+    width: 12em !important;
+    margin-left: 4em;
+}
+
+.PublishableGrid .entry .AudioPlayer .mejs-controls > * {
+    display: none;
+}
+
+.PublishableGrid .entry .AudioPlayer .mejs-controls > .mejs-playpause-button {
+    display: block;
+}
+
+.PublishableGrid .entry .AudioPlayer .mejs-time-rail {
+    display: block;
+    width: 7.4em !important;
+}
+
+.PublishableGrid .entry .AudioPlayer .mejs-time-total {
+    width: 7.4em !important;
+}
+
+.PublishableGrid .entry .AudioPlayer .mejs-time-loaded {
+    background: none !important;
+    background-color: #95889c !important;
+    background-color: #777 !important;
+}
+
