blocks extension: removed the default padding from the PublishableGrid view

--- a/woost/views/resources/styles/blocks.css
+++ b/woost/views/resources/styles/blocks.css
@@ -108,6 +108,10 @@
 
 /* PublishableGrid
 -----------------------------------------------------------------------------*/ 
+.PublishableGrid ul.publishable_list {
+    padding: 0;
+}
+
 .PublishableGrid .entry {
     display: inline-block;
     vertical-align: top;
