--- a/woost/views/resources/styles/blocks.css
+++ b/woost/views/resources/styles/blocks.css
@@ -162,3 +162,9 @@
     background-color: #777 !important;
 }
 
+/* PublishablePopUp
+-----------------------------------------------------------------------------*/
+.PublishablePopUp {
+    cursor: pointer;
+}
+
