blocks extension: apply a color code to disabled blocks in the blocks editor

--- a/woost/views/resources/styles/blocks-EditBlocksView.css
+++ b/woost/views/resources/styles/blocks-EditBlocksView.css
@@ -160,6 +160,11 @@
     cursor: move;
 }
 
+.EditBlocksView .BlockDisplay.disabled_block {
+    background-color: #eedbdb;
+    border-color: #cd9d9d;
+}
+
 .EditBlocksView .BlockDisplay + .BlockDisplay {
     margin-top: 1em;
 }
