--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -349,6 +349,12 @@ body {
 
 /* Collection editor
 -----------------------------------------------------------------------------*/
+.CollectionEditor > .entries > .entry {
+    white-space: nowrap;
+}
+
+/* Item collection editor
+-----------------------------------------------------------------------------*/
 .ItemCollectionEditor .ActionBar.toolbar {
     margin-bottom: 0;
 }
