--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -960,17 +960,18 @@ body.scripted .BackOfficeLayout .Table .selection {
 .BackOfficeItemView h2 {
     font-size: 1em;
     font-weight: normal;
-    overflow: hidden;
     line-height: 1.2em;
 }
 
 .BackOfficeItemView h2 .item_icon {
-    float: left;
-    margin-right: 0.5em;
+    margin-right: 0.8em;
+    display: inline-block;
+    vertical-align: top;
 }
 
 .BackOfficeItemView h2 .item_info {
-    float: left;
+    display: inline-block;
+    vertical-align: top;
 }
 
 .BackOfficeItemView h2 .item_translation {
@@ -983,6 +984,30 @@ body.scripted .BackOfficeLayout .Table .selection {
     font-size: 0.9em;
     margin-right: 0.3em;
     color: #333;
+    vertical-align: top;
+}
+
+.BackOfficeItemView h2 .item_path {
+    vertical-align: top;
+    display: inline-block;
+}
+
+.BackOfficeItemView h2 .item_references {
+    margin-top: 0.3em;
+    margin-left: -3px;
+}
+
+.BackOfficeItemView h2 .item_references .button {
+    padding-top: 0;
+}
+
+.BackOfficeItemView h2 .item_references .button .label {
+/*    color: #666;*/
+}
+
+.BackOfficeItemView h2 .item_references .panel_wrapper .panel {
+    padding: 0.5em;
+    min-width: 13em;
 }
 
 .BackOfficeItemView h2 .item_info .file_size,
@@ -3221,11 +3246,13 @@ div.success_label {
 -----------------------------------------------------------------------------*/
 .BackOfficeItemHeading .item_path {
     margin-left: -0.3em;
+    vertical-align: top;
 }
 
 .BackOfficeItemHeading .item_path ul {
     list-style-type: none;
     display: inline-block;
+    vertical-align: top;
     padding: 0;
     margin: 0;
     margin-left: 0.2em;
@@ -3233,6 +3260,7 @@ div.success_label {
 
 .BackOfficeItemHeading .item_path li {
     display: inline-block;
+    vertical-align: top;
     padding: 0;
     margin: 0;
 }
@@ -3249,6 +3277,29 @@ div.success_label {
 
 .BackOfficeItemHeading .item_path li a {
     display: inline-block;
+    vertical-align: top;
+}
+
+/* ReferenceList
+-----------------------------------------------------------------------------*/
+.BackOfficeLayout .ReferenceList .label {
+    font-size: 90%;
+    color: #333;
+}
+
+.BackOfficeLayout .ReferenceList .ContentLink {
+    font-size: 90%;
+    text-decoration: none;
+    font-size: 80%;
+}
+
+.BackOfficeLayout .ReferenceList .referrer_cell {
+    padding-right: 2em;
+}
+
+.BackOfficeLayout .ReferenceList .relation_cell {
+    color: #666;
+    font-size: 80%;
 }
 
 /* Content drag & drop
